RESOLVED FIXED117803
Fix a few missed renames from Exclusions -> Shapes
https://bugs.webkit.org/show_bug.cgi?id=117803
Summary Fix a few missed renames from Exclusions -> Shapes
Bem Jones-Bey
Reported 2013-06-19 10:53:30 PDT
Fix a few missed renames from Exclusions -> Shapes
Attachments
Patch (8.56 KB, patch)
2013-06-19 10:55 PDT, Bem Jones-Bey
no flags
Bem Jones-Bey
Comment 1 2013-06-19 10:55:06 PDT
Created attachment 205015 [details] Patch Fix missed renames
Dave Hyatt
Comment 2 2013-06-19 11:42:41 PDT
Comment on attachment 205015 [details] Patch r=me
Bem Jones-Bey
Comment 3 2013-06-19 11:45:53 PDT
Bear, FYI.
WebKit Commit Bot
Comment 4 2013-06-19 13:11:50 PDT
Comment on attachment 205015 [details] Patch Clearing flags on attachment: 205015 Committed r151750: <http://trac.webkit.org/changeset/151750>
WebKit Commit Bot
Comment 5 2013-06-19 13:11:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.